@@ -1,5 +1,7 @@
 package com.sudoku.constant.consist;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -7,7 +9,7 @@ import java.util.List;
  */
 public interface RoleName {
 
-  List<String> USER = List.of("ROLE_USER");
+  List<String> USER = Collections.singletonList("ROLE_USER");
 
-  List<String> ADMIN = List.of("ROLE_USER", "ROLE_ADMIN");
+  List<String> ADMIN = Arrays.asList("ROLE_USER", "ROLE_ADMIN");
 }
